--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+.bg_grey {
+  background-color: #ddd;
+}
+
+
+section {
+  padding: 40px 0;
+}
+
 .header_top {
   background-color: #999;
   height: 70px;
@@ -13,8 +22,23 @@
   background-color: #999;
 }
 
+#businesses {
+  text-align: center;
+}
+
+.business {
+  display: inline-block;
+  height: 50px;
+  width: calc((100% - 20px) / 6);
+  background-color: #999;
+}
+
 @media screen and (max-width: 768px) {
   .hero_text {
     margin-bottom: 20px;
+  }
+
+  .business {
+    width: calc((100% - 4px) / 2);
   }
 }
