--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ section {
   background-color: #999;
 }
 
-.feature {
+.service {
   display: inline-block;
   margin-bottom: 20px;
   height: 200px;
@@ -94,7 +94,7 @@ section {
     width: calc((100% - 4px) / 2);
   }
 
-  .feature {
+  .service {
     width: 100%;
   }
 
