--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Generale */
 .bg_grey {
   background-color: #ddd;
 }
@@ -7,10 +8,13 @@
   margin: 0 auto;
 }
 
-
-section {
+section, footer {
   padding: 40px 0;
 }
+
+/* HEADER */
+
+/* Header Top */
 
 .header_top {
   background-color: #999;
@@ -27,9 +31,9 @@ section {
   background-color: #999;
 }
 
-#businesses {
-  text-align: center;
-}
+/* MAIN */
+
+/* Sezione Businesses */
 
 .business {
   display: inline-block;
@@ -37,6 +41,8 @@ section {
   width: calc((100% - 20px) / 6);
   background-color: #999;
 }
+
+/* Sezione Services */
 
 .service {
   display: inline-block;
@@ -50,9 +56,32 @@ section {
   margin-right: 4%;
 }
 
-#designed {
-  background-color: #ddd;
+
+/* Sezione Features */
+
+.feature {
+  height: 250px;
+  width: 100%;
+  background-color: #999;
 }
+
+/* Sezione Regions */
+
+.region_row:first-child {
+  margin-bottom: 30px;
+}
+
+/* FOOTER */
+
+.social_link {
+  display: inline-block;
+  height: 15px;
+  width: 15px;
+  background-color: #999;
+}
+
+
+/* CAROUSEL */
 
 .carousel_img {
   margin: 0 auto;
@@ -73,24 +102,8 @@ section {
   background-color: #333;
 }
 
-.feature {
-  height: 250px;
-  width: 100%;
-  background-color: #999;
-}
 
-#regions {
-  background-color: #ddd;
-}
-
-.region_row:first-child {
-  margin-bottom: 30px;
-}
-
-#cta {
-  background-color: #ddd;
-}
-
+/* RESPONSIVE */
 
 @media screen and (max-width: 991px) {
   .wrapper {
