--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,18 @@ section, footer {
 /* Header Top */
 
 .header_top {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
   background-color: #999;
   height: 70px;
   line-height: 70px;
 }
 
 .hero {
+  margin-top: 70px;
   padding: 50px 0;
 }
 
