--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+
 /* Generale */
 .bg_grey {
   background-color: #ddd;
@@ -8,8 +13,35 @@
   margin: 0 auto;
 }
 
+.list_inline {
+  display: inline-block;
+}
+
 section, footer {
   padding: 40px 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+ul {
+  padding: 0;
+  list-style: none;
+}
+
+.nav_dropdown::after {
+  margin-left: 3px;
+  font-family: 'Font Awesome 5 Free';
+  content: "\f078";
+  color: #031C4E;
+  font-weight: 900;
+  vertical-align: middle;
+
 }
 
 /* HEADER */
@@ -22,9 +54,41 @@ section, footer {
   left: 0;
   z-index: 1;
   width: 100%;
-  background-color: #999;
+  background-color: #fff;
   height: 70px;
   line-height: 70px;
+}
+
+.logo_img {
+  height: 28px;
+}
+
+
+.header_top a {
+  color: #031C4E;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.header_top a:hover {
+  color: #1E7CFF;
+}
+
+.header_top li:not(:last-child) {
+  margin-right: 15px;
+}
+
+.signup_button a {
+  padding: 6px 10px;
+  font-size: 15px;
+  color: #1E7CFF;
+  border: 1px solid #1E7CFF;
+  border-radius: 3px;
+}
+
+.signup_button a:hover {
+  background-color: #1E7CFF;
+  color: #fff;
 }
 
 .hero {
