--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,12 @@ ul {
   color: #fff;
 }
 
+#hamburger_menu {
+  font-size: 20px;
+  color: #1E7CFF;
+  cursor: pointer;
+}
+
 .hero {
   margin-top: 70px;
   padding: 50px 0;
